--- a/src/sass/pages/about/skills/_skills.scss
+++ b/src/sass/pages/about/skills/_skills.scss
@@ -33,5 +33,10 @@
     & span {
       color: $color-secondary;
     }
+
+    @include respond(small-phone) {
+      margin: 0;
+      padding: 2rem;
+    }
   }
 }
