Responsiviness - Making Portfolio Page Responsive

--- a/src/sass/pages/portfolio/item/_item.scss
+++ b/src/sass/pages/portfolio/item/_item.scss
@@ -1,5 +1,9 @@
 .portfolio__pinned {
   &--item {
+    height: 42rem;
+    width: 27rem;
+    overflow: hidden;
+
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 27rem 10rem;
