--- a/src/sass/pages/portfolio/_portfolio.scss
+++ b/src/sass/pages/portfolio/_portfolio.scss
@@ -13,7 +13,7 @@
     &--container {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      grid-template-rows: 5rem repeat(auto-fit, 41rem);
+      grid-template-rows: auto;
       grid-column-gap: 1rem;
       grid-row-gap: 2rem;
 
@@ -28,6 +28,11 @@
           ),
         url("../../../assets/images/pinned-background.jpg");
       background-size: cover;
+
+      @include respond(small-phone) {
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+      }
     }
 
     &--title {
@@ -38,11 +43,19 @@
       justify-content: flex-start;
       align-items: baseline;
 
+      @include respond(small-phone) {
+        font-size: 1.5rem;
+      }
+
       & h1 {
         font-family: "Nunito", cursive;
         font-size: 2.7rem;
         color: $color-white;
         margin-left: 1rem;
+
+        @include respond(small-phone) {
+          font-size: 4rem;
+        }
       }
     }
   }
