--- a/src/sass/pages/portfolio/overall/_overall.scss
+++ b/src/sass/pages/portfolio/overall/_overall.scss
@@ -9,9 +9,11 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fit, 27rem);
-    grid-template-rows: 5rem 41rem;
+    grid-template-rows: 5rem repeat(auto-fit, 41rem);
     grid-column-gap: 1rem;
     grid-row-gap: 4rem;
+
+    justify-content: center;
   }
 
   &__title {
