--- a/src/sass/pages/contact/_contact.scss
+++ b/src/sass/pages/contact/_contact.scss
@@ -1,74 +1,102 @@
 .contact {
-	&__container {
-		min-height: 100vh;
-		height: auto;
-		width: 100%;
+  &__container {
+    min-height: 100vh;
+    height: auto;
+    width: 100%;
 
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: auto;
-	}
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
 
-	&__content {
-		&--container {
-			height: auto;
-			width: 50vw;
+    @include respond(tab-land) {
+      grid-template-columns: 1fr;
+    }
+  }
 
-			display: grid;
-			grid-template-columns: 1fr;
-			grid-template-rows: 1fr 1fr;
+  &__content {
+    &--container {
+      height: auto;
+      width: 50vw;
 
-			justify-content: center;
-			background-color: $color-primary;
-		}
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr;
 
-		&--email,
-		&--schedule {
-			display: flex;
-			flex-direction: column;
-			color: $color-white;
+      justify-content: center;
+      background-color: $color-primary;
 
-			& h1 {
-				font-family: "Nunito", cursive;
-				margin-top: 3rem;
-			}
-		}
+      @include respond(tab-land) {
+        height: 100%;
+        width: 100vw;
+      }
+    }
 
-		&--schedule {
-			cursor: pointer;
-			justify-content: center;
-			align-items: center;
-			background-color: $color-secondary;
-			transition: all 0.7s ease-in;
+    &--email,
+    &--schedule {
+      display: flex;
+      flex-direction: column;
+      color: $color-white;
 
-			&:hover {
-				background-color: $color-tertiary;
-			}
-		}
+      & h1 {
+        font-family: "Nunito", cursive;
+        margin-top: 3rem;
+      }
+    }
 
-		&--email {
-			font-family: "Nunito", cursive;
-			padding: 1rem;
+    &--schedule {
+      cursor: pointer;
+      justify-content: center;
+      align-items: center;
+      background-color: $color-secondary;
+      transition: all 0.7s ease-in;
 
-			& h1 {
-				font-size: 4rem;
-				font-weight: 300;
-				margin: 3rem;
-			}
+      &:hover {
+        background-color: $color-tertiary;
 
-			& h3 {
-				font-size: 2rem;
-				font-weight: 300;
+        @include respond(tab-land) {
+          background-color: $color-secondary;
+        }
+      }
+    }
 
-				margin-left: 3rem;
-			}
-		}
-	}
+    &--email {
+      font-family: "Nunito", cursive;
+      padding: 1rem;
 
-	&--footer {
-		grid-column-start: 1;
-		grid-column-end: -1;
-	}
+      @include respond(tab-land) {
+        height: 47.5vh;
+      }
+
+      & h1 {
+        font-size: 4rem;
+        font-weight: 300;
+        margin: 3rem;
+
+        @include respond(tab-land) {
+          font-size: 6rem;
+        }
+      }
+
+      & h3 {
+        font-size: 2rem;
+        font-weight: 300;
+
+        margin-left: 3rem;
+
+        @include respond(tab-land) {
+          font-size: 3rem;
+        }
+        @include respond(small-phone) {
+          font-size: 2.5rem;
+        }
+      }
+    }
+  }
+
+  &--footer {
+    grid-column-start: 1;
+    grid-column-end: -1;
+  }
 }
 
 .info {
