--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -1,3 +1,12 @@
+.map--marker {
+	height: 1.2rem;
+	width: 1.2rem;
+	border-radius: 50%;
+
+	color: $color-secondary;
+	background-color: $color-secondary;
+}
+
 .color--white {
 	color: $color-white;
 }
