--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./components/button";
 @import "./components/footer";
 @import "./components/calendar-bounce";
+@import "./components/map";
 
 // Pages
   // Home
