--- a/src/sass/pages/contact/_contact.scss
+++ b/src/sass/pages/contact/_contact.scss
@@ -8,6 +8,7 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
 
+    overflow: hidden;
     @include respond(tab-land) {
       grid-template-columns: 1fr;
     }
@@ -16,11 +17,8 @@
   &__content {
     &--container {
       height: auto;
+      min-height: 100vh;
       width: 50vw;
-
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 1fr;
 
       justify-content: center;
       background-color: $color-primary;
@@ -29,45 +27,29 @@
         height: 100%;
         width: 100vw;
       }
-    }
 
-    &--email,
-    &--schedule {
-      display: flex;
-      flex-direction: column;
-      color: $color-white;
-
-      & h1 {
-        font-family: "Nunito", cursive;
-        margin-top: 3rem;
-      }
-    }
-
-    &--schedule {
-      cursor: pointer;
-      justify-content: center;
-      align-items: center;
-      background-color: $color-secondary;
-      transition: all 0.7s ease-in;
-
-      &:hover {
-        background-color: $color-tertiary;
-
-        @include respond(tab-land) {
-          background-color: $color-secondary;
-        }
+      @include respond(large-phone) {
+        min-height: 95vh;
       }
     }
 
     &--email {
-      font-family: "Nunito", cursive;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
       padding: 1rem;
+
+      font-family: "Nunito", cursive;
+      color: $color-white;
 
       @include respond(tab-land) {
         height: 47.5vh;
       }
 
       & h1 {
+        margin-top: 3rem;
+
+        font-family: "Nunito", cursive;
         font-size: 4rem;
         font-weight: 300;
         margin: 3rem;
@@ -99,9 +81,66 @@
   }
 }
 
-.info {
-  &--email {
-    color: $color-secondary;
-    margin-bottom: 1rem;
+.contact-form {
+  &__container {
+    width: 70%;
+
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-self: center;
+
+    margin-top: 10rem;
+
+    @include respond(large-phone) {
+      width: 90%;
+    }
+  }
+
+  &__textarea,
+  &__input {
+    font-family: "Nunito", cursive;
+    font-size: 1.5rem;
+
+    margin: 1rem;
+    padding: 1rem;
+
+    border: none;
+    outline: none;
+    border-radius: 0.3rem;
+
+    @include respond(large-phone) {
+      font-size: 1.9rem;
+    }
+  }
+
+  &__textarea {
+    height: 15rem;
+    resize: none;
+  }
+
+  &__submit {
+    width: 15rem;
+
+    display: flex;
+    justify-content: center;
+    align-self: flex-end;
+
+    padding: 1rem;
+    margin: 2.5rem 1rem 1rem 1rem;
+
+    border: none;
+    border-radius: 0.5rem;
+
+    font-family: "Nunito", cursive;
+    font-size: 1.5rem;
+    color: $color-white;
+    background-color: $color-secondary;
+    transition: all 250ms ease-out;
+
+    &:hover {
+      background-color: $color-secondary-darken;
+    }
   }
 }
